<resources>
    <string name="app_name">Health Monitoring Doctor App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_patient_detail">PatientDetail</string>
    <string name="menu_see_all_doctor">SeeAllDoctor</string>
    <string name="menu_see_medicine_prescription">SeeMedicinePrescription</string>
    <string name="menu_send_massage">SendMassage</string>
    <string name="menu_alert_notification">AlertNotification</string>
    <string name="home_second">Home Second</string>
</resources>
